--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/quill": "^2.0.3",
     "@types/uuid": "^7.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "lerna": "^3.20.2",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
@@ -32,5 +33,10 @@
     "quill": "^1.3.7",
     "quill-delta": "^4.2.2",
     "uuid": "^8.0.0"
-  }
+  },
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ]
 }
