--- a/examples/quill-ot-local-example/tsconfig.json
+++ b/examples/quill-ot-local-example/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../../tsconfig.json"
+  "compilerOptions": {
+    "outDir": "./lib"
+  },
+  "extends": "../../tsconfig.json",
+  "references": [{ "path": "../../packages/quill-ot-core" }]
 }
