--- a/packages/quill-ot-core/tsconfig.json
+++ b/packages/quill-ot-core/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
+    "rootDir": "./src",
     "outDir": "./lib"
   },
   "include": ["src/**/*"]
