--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "quill-ot-example",
+  "name": "@pirosikic/quill-ot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "esm/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "del lib esm",
+    "build": "run-s build:*",
+    "build:commonjs": "tsc -p tsconfig.commonjs.json",
+    "build:esm": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,7 +27,7 @@
     "@types/uuid": "^7.0.3",
     "del-cli": "^3.0.1",
     "html-webpack-plugin": "^4.3.0",
-    "lerna": "^3.20.2",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
@@ -35,9 +39,5 @@
     "quill-delta": "^4.2.2",
     "uuid": "^8.0.0"
   },
-  "private": true,
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ]
+  "private": true
 }
